--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ ga_analytics:
 
 # Author
 author:
-  name: 'Daniel Bennett'
+  name: 'Enrico Shippole'
   image: 'authorimage.jpg'
   greetings: 'Hi there!'
   description: "My name is Daniel Bennett. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
