--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   name: 'Enrico Shippole'
   image: 'authorimage.jpg'
   greetings: 'Hi there!'
-  description: "My name is Daniel Bennett. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
+  description: "My name is Enrico Shippole. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
   bio: 'Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.'
 
 # Contact form setings
